2015-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-refresh): Mention Google looping problem in docstring.
	(w3m-refresh-minimum-interval): Default to 5; change the meaning.
	(w3m-check-refresh-attribute, w3m-view-previous-page):
	Do nothing for w3m-refresh-minimum-interval.
	(w3m-refresh-at-time):
	Override meta refresh seconds by w3m-refresh-minimum-interval.
	(w3m-goto-url-with-timer): Check for buffer's existence correctly.

2015-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-error): Work for XEmacs.  [emacs-w3m:12444]
	(w3m-retrieve-and-render): Work for XEmacs.
	Note: `get-buffer-window' requires a buffer for the 1st arg in XEmacs.

2015-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-refresh-at-time):
	Temporary fix to avoid Google search looping.  [emacs-w3m:12440]

2015-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-error): New face.
	(w3m-retrieve-and-render): Denote `failed' if it did so.

2015-04-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-clear-display-while-reading): New user option.
	(w3m-retrieve-and-render): Clear the current display while reading
	a new page if w3m-clear-display-while-reading is non-nil.
	[emacs-w3m:12428]

2015-04-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-savable-p): New function.
	(w3m-toolbar, w3m-menubar): Use it.

	* w3m-save.el: Provide the feature.

2015-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toolbar-buttons, w3m-toolbar): Add `Save' button.

	* icons/save-up.png, icons/save-up.xpm
	* icons30/save-up.png, icons30/save-up.xpm: New files.

2015-04-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-save.el: New file.

	* w3m.el (w3m-menubar, w3m-lynx-like-map, w3m-info-like-map):
	Add w3m-save-buffer and bind `C-x C-s' to it.

2015-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-add-name-anchors):
	Don't use ambiguous regexp.  [emacs-w3m:12422]

2015-02-08  Katsumi Yamaoka  <yamaoka@jpl.org>
